--- a/assets/partials/navbar.html
+++ b/assets/partials/navbar.html
@@ -9,7 +9,7 @@
         <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
         <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
         <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link" href="recibo-simples.html">Gerar Recibo</a></li>
         <li class="nav-item"><a class="nav-link" href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link" href="qrcode.html">Gerar QR Code</a></li>
         <li class="nav-item"><a class="nav-link" href="calculadora-imc.html">Calculadora IMC</a></li>
