--- a/assets/partials/navbar.html
+++ b/assets/partials/navbar.html
@@ -12,7 +12,7 @@
         <li class="nav-item"><a class="nav-link" href="recibo-simples.html">Gerar Recibo</a></li>
         <li class="nav-item"><a class="nav-link" href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link" href="qrcode.html">Gerar QR Code</a></li>
-        <li class="nav-item"><a class="nav-link" href="calculadora-imc.html">Calculadora IMC</a></li>
+        <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
 
         <!-- LOGIN padrão (aparece só quando NÃO estiver logado) -->
         <li class="nav-item" id="nav-login-item">
